<resources>
    <string name="app_name">Müveé</string>

    <string name="facebook_app_id">1780275615534731</string>
    <string name="fb_login_protocol_scheme">fb1780275615534731</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_loading">Signing in…</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_incorrect_password">Username or Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_exit">Are you sure you want to exit?</string>
    <string name="prompt_logout">Are you sure you want to logout?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_password_mismatch">Passwords are not the same</string>
    <string name="action_sign_up_loading">Creating Account…</string>
    <string name="prompt_registration_error">Registration failed please try again…</string>

    <string-array name="majors_list">
        <item>Choose a Major</item>
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Industrial and Systems Engineering</item>
        <item>Math</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Chemical Engineering</item>
    </string-array>
    <string name="prompt_profile_description">Write something about yourself</string>
    <string name="title_activity_user_profile">Edit Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Industrial and Systems Engineering</item>
        <item>Math</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Chemical Engineering</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_edit_profile">Profile</string>
    <string name="pref_title_edit_email">Email</string>
    <string name="pref_title_change_password">Password</string>
    <string name="pref_title_change_description">User Description</string>
    <string name="pref_title_change_major">Major</string>
    <string name="pref_default_display_password">1234</string>

    <string name="team_name">❤ LogiTechs</string>
    <string name="title_activity_muvee_admin">MuveeAdminActivity</string>
    <string name="title_activity_muvee_admin_user_priv">Edit User Privileges</string>
    <string name="title_activity_muvee_maps">Cinemas near you</string>
</resources>
